fixed wrap for browse recipe page

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,82 @@ nav #navItems #loginBtn {
 }
 
 @font-face {
+  font-family: "Lato";
+  src: url("../assets/fonts/Lato-Regular.ttf");
+}
+.background {
+  background-image: linear-gradient(rgba(167, 232, 189, 0.5), rgba(167, 232, 189, 0.5)), url("../images/recipe-hero.jpg");
+  background-size: cover;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.background .recipe-title {
+  font-family: "Caveat";
+}
+.background .recipes {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.background .recipes .recipe {
+  max-width: 524px;
+  height: 263px;
+  display: flex;
+  margin-bottom: 50px;
+}
+.background .recipes .recipe .recipe-img {
+  width: 300px;
+  height: 263px;
+}
+.background .recipes .recipe .recipe-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15%;
+}
+.background .recipes .recipe .recipe-textBox {
+  background-color: white;
+  border-radius: 15%;
+  height: 263px;
+  width: 224px;
+  font-family: "Lato";
+}
+.background .recipes .recipe .recipe-textBox .recipe-text {
+  margin: 0 auto;
+  height: 80%;
+  width: 80%;
+}
+.background .recipes .recipe .recipe-textBox .recipe-text .icon-text {
+  align-self: center;
+  margin: 0 auto;
+  height: 24px;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 10px;
+}
+.background .recipes .recipe .recipe-textBox .recipe-text .icon-text img {
+  object-fit: fill;
+  height: 100%;
+  width: 25px;
+}
+.background .recipes .recipe .recipe-textBox .recipe-text h1 {
+  width: 80%;
+  font-size: 15px;
+  margin: 0 auto;
+}
+.background .recipes .recipe .recipe-textBox .recipe-text p {
+  width: 80%;
+  font-size: 12px;
+  margin: 0 auto;
+}
+
+@font-face {
   font-family: "Lato Italic";
   src: url("../assets/fonts/Lato-Italic.ttf");
 }
